--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 
 <head>
 	<meta charset="utf-8">
-
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Sprint Challenge - Home</title>
-
+	<link rel="stylesheet" href="css/index.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/5b12ffad4b.js" crossorigin="anonymous"></script>
 </head>
@@ -16,13 +16,24 @@
 		<!-- header -->
 		<header>
 			<div>
-				BLOOMTECH BAR AND GRILL
-
+				<a href="index.html"><h1>BLOOMTECH BAR AND GRILL</h1></a>
+				
 				<!-- nav -->
-				Menu
-				Reservations
-				Special Offers
-				Contact
+				<nav class="navbar">
+					<a href="menu.html">Menu</a>
+					<a href="#">Reservations</a>
+					<a href="#">Special Offers</a>
+					<a href="#">Contact</a>
+				</nav>
+			</div>
+			<div class="social-media">
+				<a href="#"><i class="fa-brands fa-facebook"></i></a>
+				<p>facebook</p>
+				<a href="#"><i class="fa-brands fa-twitter"></i></a>
+				<p>twitter</p>
+				<a href="#"><i class="fa-brands fa-instagram"></i></a>
+				<p>instagram</p>
+				
 			</div>
 		</header>
 
@@ -30,24 +41,33 @@
 		<section class="gallery">
 			<div>
 				<h2>OUR FOOD</h2>
-
-				img/food-avocadotoast.jpg
-
-				img/food-burger.jpg
-
-				img/food-poutine.jpg
-
-				img/food-ribs.jpg
-
-				img/food-sandwich.jpg
-
-				img/food-sausage.jpg
-
-				img/food-steak.jpg
-
-				img/food-tacos.jpg
-
-				img/food-wings.jpg
+				<div>
+					<img src="/img/food-avocadotoast.jpg" alt="avocado toast illustration">
+				</div>
+				<div>
+					<img src="/img/food-burger.jpg" alt="hamburger illustration">
+				</div>
+				<div>
+					<img src="/img/food-poutine.jpg" alt="poutine illustration">
+				</div>
+				<div>
+					<img src="/img/food-ribs.jpg" alt="pork ribs illustration">
+				</div>
+				<div>
+					<img src="/img/food-sandwich.jpg" alt="sandwich illustration">
+				</div>
+				<div>
+					<img src="/img/food-sausage.jpg" alt="sausage illustration">
+				</div>
+				<div>
+					<img src="/img/food-steak.jpg" alt="steak illustration">
+				</div>
+				<div>
+					<img src="/img/food-tacos.jpg" alt="tacos illustration">
+				</div>
+				<div>
+					<img src="/img/food-wings.jpg" alt="fried wings illustration">
+				</div>
 			</div>
 		</section>
 
@@ -125,15 +145,26 @@
 		<!-- footer -->
 		<footer>
 			<!-- email signup -->
-			Join our mailing list!
-			Sign Up
+			<div class="email">
+				<h2>Join our mailing list!</h2>
+				<h3>Sign Up</h3>
+			</div>
+			
 			<!-- nav -->
-			Menu
-			Reservations
-			Special Offers
-			Contact
+			<div>
+				<nav class="navbar">
+					<a href="menu.html">Menu</a>
+					<a href="#">Reservations</a>
+					<a href="#">Special Offers</a>
+					<a href="#">Contact</a>
+				</nav>
+			</div>
+			
 			<!-- copyright -->
-			©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.
+			<div class="copyright">
+				<p>©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.</p>
+			</div>
+			
 		</footer>
 	</div>
 </body>
