--- a/menu.html
+++ b/menu.html
@@ -4,8 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Sprint Challenge - Menu</title>
     <link rel="stylesheet" href="css/menu.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
@@ -22,9 +21,9 @@
 				<!-- nav -->
 				<nav class="navbar">
 					<a href="menu.html">Menu</a>
-					<a href="#">Reservations</a>
-					<a href="#">Special Offers</a>
-					<a href="#">Contact</a>
+					<a href="reservations.html">Reservations</a>
+					<a href="specialoffers.html">Special Offers</a>
+					<a href="contact.html">Contact</a>
 				</nav>
 			</div>
 			<div class="social-media">
@@ -147,9 +146,9 @@
 			<div>
 				<nav class="navbar">
 					<a href="menu.html">Menu</a>
-					<a href="#">Reservations</a>
-					<a href="#">Special Offers</a>
-					<a href="#">Contact</a>
+					<a href="reservations.html">Reservations</a>
+					<a href="specialoffers.html">Special Offers</a>
+					<a href="contact.html">Contact</a>
 				</nav>
 			</div>
 			
