--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<title>Sprint Challenge - Home</title>
 	<link rel="stylesheet" href="css/index.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
@@ -21,7 +21,7 @@
 				<!-- nav -->
 				<nav class="navbar">
 					<a href="menu.html">Menu</a>
-					<a href="#">Reservations</a>
+					<a href="reservations.html">Reservations</a>
 					<a href="#">Special Offers</a>
 					<a href="#">Contact</a>
 				</nav>
