--- a/menu.html
+++ b/menu.html
@@ -19,20 +19,19 @@
 				<a href="index.html"><h1>BLOOMTECH BAR AND GRILL</h1></a>
 				
 				<!-- nav -->
-				<nav class="navbar">
-					<a href="menu.html">Menu</a>
-					<a href="reservations.html">Reservations</a>
-					<a href="specialoffers.html">Special Offers</a>
-					<a href="contact.html">Contact</a>
-				</nav>
+				<div class="navbar">
+					<nav>
+						<a href="menu.html">Menu</a>
+						<a href="reservations.html">Reservations</a>
+						<a href="specialoffers.html">Special Offers</a>
+						<a href="contact.html">Contact</a>
+					</nav>
+				</div>
 			</div>
 			<div class="social-media">
-				<a href="#"><i class="fa-brands fa-facebook"></i></a>
-				<p>facebook</p>
-				<a href="#"><i class="fa-brands fa-twitter"></i></a>
-				<p>twitter</p>
-				<a href="#"><i class="fa-brands fa-instagram"></i></a>
-				<p>instagram</p>
+				<a href="#"><i class="fa-brands fa-facebook">facebook</i></a>
+				<a href="#"><i class="fa-brands fa-twitter">twitter</i></a>
+				<a href="#"><i class="fa-brands fa-instagram"></i>instagram</a>
 			</div>
 		</header>
 
@@ -143,14 +142,14 @@
 			</div>
 			
 			<!-- nav -->
-			<div>
-				<nav class="navbar">
-					<a href="menu.html">Menu</a>
-					<a href="reservations.html">Reservations</a>
-					<a href="specialoffers.html">Special Offers</a>
-					<a href="contact.html">Contact</a>
-				</nav>
-			</div>
+			<div class="navbar">
+                <nav>
+                    <a href="menu.html">Menu</a>
+                    <a href="reservations.html">Reservations</a>
+                    <a href="specialoffers.html">Special Offers</a>
+                    <a href="contact.html">Contact</a>
+                </nav>
+            </div>
 			
 			<!-- copyright -->
 			<div class="copyright">
