--- a/reservations.html
+++ b/reservations.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="h1">
-            <h1>BLOOMTECH BAR AND GRILL</h1>
+            <a href="index.html"><h1>BLOOMTECH BAR AND GRILL</h1></a>
         </div>
         <div class="navbar">
             <nav>
