--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
 					<nav>
 						<a href="menu.html">Menu</a>
 						<a href="reservations.html">Reservations</a>
-						<a href="#">Special Offers</a>
-						<a href="#">Contact</a>
+						<a href="specialoffers.html">Special Offers</a>
+						<a href="contact.html">Contact</a>
 					</nav>
 				</div>
 				
 			</div>
 			<div class="social-media">
-				<a href="#"><i class="fa-brands fa-facebook">facebook</i></a>
-				<a href="#"><i class="fa-brands fa-twitter">twitter</i></a>
-				<a href="#"><i class="fa-brands fa-instagram">instagram</i></a>
+				<a href="https://www.facebook.com"><i class="fa-brands fa-facebook">facebook</i></a>
+				<a href="https://www.twitter.com"><i class="fa-brands fa-twitter">twitter</i></a>
+				<a href="https://www.instagram.com"><i class="fa-brands fa-instagram">instagram</i></a>
 			</div>
 		</header>
 
@@ -149,7 +149,10 @@
 				<h2>Join our mailing list!</h2>
 				<h3>Sign Up</h3>
 			</div>
-			
+			<div class="signdiv">
+				<input type="text" name="email">
+				<button>Sign up</button>
+			</div>
 			<!-- nav -->
 			<div class="navbar">
 				<nav>
