--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 						<a href="reservations.html">Reservations</a>
 						<a href="specialoffers.html">Special Offers</a>
 						<a href="contact.html">Contact</a>
+						<a href="about.html">About</a>
 						<div class="social-media">
 							<a href="https://www.facebook.com"><i class="fa-brands fa-facebook">facebook</i></a>
 							<a href="https://www.twitter.com"><i class="fa-brands fa-twitter">twitter</i></a>
@@ -158,10 +159,10 @@
 					<a href="reservations.html">Reservations</a>
 					<a href="specialoffers.html">Special Offers</a>
 					<a href="contact.html">Contact</a>
-					<div class="signdiv">
-						<input type="text" name="email">
-						<button>Sign up</button>
-					</div>
+					
+					<input type="text" name="email">
+					<button>Sign up</button>
+					
 				</nav>
 			</div>
 			
