--- a/menu.html
+++ b/menu.html
@@ -25,6 +25,7 @@
 						<a href="reservations.html">Reservations</a>
 						<a href="specialoffers.html">Special Offers</a>
 						<a href="contact.html">Contact</a>
+						<a href="about.html">About</a>
                         <div class="social-media">
                             <a href="https://www.facebook.com"><i class="fa-brands fa-facebook">facebook</i></a>
                             <a href="https://www.twitter.com"><i class="fa-brands fa-twitter">twitter</i></a>
@@ -150,10 +151,10 @@
                     <a href="reservations.html">Reservations</a>
                     <a href="specialoffers.html">Special Offers</a>
                     <a href="contact.html">Contact</a>
-                    <div class="signdiv">
-                        <input type="text" name="email">
-                        <button>sign up</button>
-                    </div>
+                    
+                    <input type="text" name="email">
+                    <button>sign up</button>
+                    
                 </nav>
             </div>
 			
