--- a/menu.html
+++ b/menu.html
@@ -29,7 +29,7 @@
                         <div class="social-media">
                             <a href="https://www.facebook.com"><i class="fa-brands fa-facebook">facebook</i></a>
                             <a href="https://www.twitter.com"><i class="fa-brands fa-twitter">twitter</i></a>
-                            <a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i>instagram</a>
+                            <a href="https://www.instagram.com"><i class="fa-brands fa-instagram">instagram</i></a>
                         </div>
 					</nav>
 				</div>
@@ -151,9 +151,12 @@
                     <a href="reservations.html">Reservations</a>
                     <a href="specialoffers.html">Special Offers</a>
                     <a href="contact.html">Contact</a>
+                    <div class="signup">
+                        <label for="email">Email:</label>
+                        <input type="text" name="email">
+                        <button>sign up</button>
+                    </div>
                     
-                    <input type="text" name="email">
-                    <button>sign up</button>
                     
                 </nav>
             </div>
