--- a/index.html
+++ b/index.html
@@ -160,8 +160,11 @@
 					<a href="specialoffers.html">Special Offers</a>
 					<a href="contact.html">Contact</a>
 					
-					<input type="text" name="email">
-					<button>Sign up</button>
+					<div class="signup">
+						<label for="email">Email:</label>
+						<input type="text" name="email">
+						<button>Sign up</button>
+					</div>
 					
 				</nav>
 			</div>
